<resources>
    <string name="app_name">sample</string>
    <string name="signup">Don\'t have an account? Sign up.</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="applicant">Applicant</string>
    <string name="employer">Employer</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login">Login</string>
    <string name="proceed">Continue</string>
    <string name="submit">Submit</string>
    <string name="enter_otp">Enter OTP from SMS</string>
</resources>