<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@color/light_grey"
    android:gravity="center"
    android:id="@+id/main"
    tools:context=".MainActivity">

    <!-- Logo and WorkBridge Text -->
    <ImageView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_gravity="center"
        android:background="@drawable/logo_wb" />

    <!-- Buttons for Applicant and Employer -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/btn_applicant"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:text="@string/applicant"
            android:backgroundTint="@color/blue"
            android:textColor="@color/white"
            android:layout_marginEnd="10dp"/>

        <Button
            android:id="@+id/btn_employer"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:text="@string/employer"
            android:backgroundTint="@color/blue"
            android:textColor="@color/white"
            android:layout_marginStart="10dp"/>
    </LinearLayout>

    <!-- Email and Password Fields -->
    <EditText
        android:id="@+id/et_email_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_hint"
        android:autofillHints="emailAddress"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:backgroundTint="@color/black"
        android:padding="16dp"
        android:maxWidth="300dp"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/et_password_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:autofillHints="password"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:backgroundTint="@color/black"
        android:padding="16dp"
        android:maxWidth="300dp" />

    <!-- Forgot Password and Login Button -->
    <TextView
        android:id="@+id/tv_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:layout_gravity="end"
        android:layout_marginRight="5dp"
        android:clickable="true"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:backgroundTint="@color/blue"
        android:textColor="@color/white"
        android:maxWidth="300dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"/>

    <!-- Sign Up Link -->
    <TextView
        android:id="@+id/tv_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingTop="10dp"
        android:text="@string/signup"
        android:textColor="@color/black"
        android:textSize="15sp"/>
</LinearLayout>