<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/blue"
        android:padding="10dp">

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/back_btn"
            android:background="@color/blue"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/forgot_password"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:gravity="center"
            android:padding="10dp"
            android:layout_marginRight="40dp"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_otp"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:padding="20dp"
        android:layout_marginTop="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="20dp">

        <EditText
            android:id="@+id/et_otp1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text=""
            android:inputType="number"
            android:maxLength="1"
            android:textSize="30dp"/>

        <EditText
            android:id="@+id/et_otp2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text=""
            android:inputType="number"
            android:maxLength="1"
            android:layout_marginLeft="5dp"
            android:textSize="30dp"/>

        <EditText
            android:id="@+id/et_otp3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text=""
            android:inputType="number"
            android:maxLength="1"
            android:layout_marginLeft="5dp"
            android:textSize="30dp"/>

        <EditText
            android:id="@+id/et_otp4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text=""
            android:inputType="number"
            android:maxLength="1"
            android:layout_marginLeft="5dp"
            android:textSize="30dp"/>

        <EditText
            android:id="@+id/et_otp5"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text=""
            android:inputType="number"
            android:maxLength="1"
            android:layout_marginLeft="5dp"
            android:textSize="30dp"/>

        <EditText
            android:id="@+id/et_otp6"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text=""
            android:inputType="number"
            android:maxLength="1"
            android:layout_marginLeft="5dp"
            android:textSize="30dp"/>
    </LinearLayout>

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:backgroundTint="@color/blue"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Resend OTP"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        android:textSize="15sp"
        android:textStyle="bold"/>

</LinearLayout>